# renderer-ray-trace

./: Cargo.toml  README.md
src/: camera.rs  color.rs  format.rs  hittable.rs  main.rs  material.rs  ray.rs  vec.rs
src/bmp/: README.md  consts.rs  decoder.rs  encoder.rs  mod.rs
