[package]
name = "renderer-ray-trace"
version = "0.1.0"
authors = ["Chris Lieb <chris.lieb@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"

[dependencies]
byteorder = "^1.0.0"  # used by vendored copy of bmp 0.5.0
rand = "~0.8.4"
rayon = "~1.5.1"
time = { version = "~0.3", features=["formatting", "local-offset"] }
